<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@color/black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_helloscreen_bg"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:background="@drawable/ic_helloscreen_bg">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_logo_white"
          android:layout_gravity="top|center"
          android:layout_marginTop="14dp"
          />


      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_helloscreen_corona2_2"
          android:layout_gravity="bottom|center"
    />
</LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_name"
        android:textSize="24sp"
        android:textColor="#1C1819"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/activity_main_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/bg_inputname"
        android:hint="@string/enter_your_name"/>

    <Button
        android:id="@+id/activity_main_open_hallo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@drawable/text_color"
        android:textAllCaps="false"
        android:padding="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/continue_btn"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:enabled="false"/>


</LinearLayout>
