<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="start"
    android:background="@drawable/bg_upcoming_events"
    tools:context=".event_details.presentation.EventDetailsActivity">
<FrameLayout
    android:background="@drawable/bg_upcoming_events"
    android:layout_width="match_parent"
    android:minHeight="800dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="26dp"
        android:layout_marginStart="@dimen/margin_size_16dp"
        android:layout_marginEnd="@dimen/margin_size_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/text_padding_10dp">

        <ImageButton
            android:id="@+id/activity_event_details_ic_arrow_back"
            android:src="@drawable/ic_arrow_back"
            android:background="#051021"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_white"
            android:layout_margin="@dimen/margin_size_16dp"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/activity_event_details_favorite_image_vew"
            android:layout_width="@dimen/ic_size_24dp"
            android:layout_height="@dimen/ic_size_24dp"
            android:src="@drawable/ic_favorite_border"
            android:layout_gravity="end|center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="95dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/activity_event_details_speaker_photo"
        android:layout_width="match_parent"
        android:layout_height="330dp"
         />

        <TextView
            android:id="@+id/activity_event_details_speaker_invited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_speaker"
            android:background="@drawable/bg_button"
            android:textColor="#FAFAFA"
            android:textSize="@dimen/textview_textsize_13sp"
            android:layout_marginBottom="@dimen/bnt_padding_8dp"
            android:paddingHorizontal="@dimen/padding_4dp"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"
            android:layout_marginTop="@dimen/margin_size_16dp"/>

        <TextView
            android:id="@+id/activity_event_details_speaker_name"
            android:text=""
            tools:text="@string/upcoming_events_card_ex2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"
            />

        <TextView
            android:id="@+id/activity_event_details_speaker_job"
            android:text=""
            tools:text="@string/upcoming_events_card_ex3"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textsize_16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
        <View
            android:layout_marginTop="@dimen/margin_size_16dp"
            android:layout_marginBottom="@dimen/bnt_padding_8dp"
            android:background="@drawable/line_event_details"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
        <TextView
            android:id="@+id/activity_event_details_time_place"
            android:text=""
            tools:text="@string/upcoming_events_card_ex1"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_title_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/margin_size_16dp"
            android:background="@drawable/line_event_details"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
        <TextView
            android:id="@+id/activity_event_details_title"
            android:text=""
            tools:text="@string/upcoming_events_card_ex4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
        <TextView
            android:id="@+id/activity_event_details_description"
            android:text=""
            tools:text="@string/upcoming_events_card_ex4"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_size_16dp"
            android:layout_marginBottom="@dimen/margin_size_16dp"
            android:textSize="@dimen/textview_title_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16dp"
            android:layout_marginEnd="@dimen/margin_size_16dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_event_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"/>
</FrameLayout>
</ScrollView>